--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <script src="js/three.min.js"></script>
+        <script src="js/structure.js"></script>
         <script src="js/setup.js"></script>
         <script src="js/main.js"></script>
     </body>
