Added a test organism.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <script src="js/three.min.js"></script>
         <script src="js/structure.js"></script>
+        <script src="js/organism.js"></script>
         <script src="js/setup.js"></script>
         <script src="js/main.js"></script>
     </body>
